# dynet

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  INSTALL.md  MANIFEST.in  MEM.notes  PYINSTALL.md  README.md  TODO.cnn  config.h.cmake  devices.cc  do-configure.sh  pyproject.toml  setup.py  this-does-nothing.txt
cnn/: CMakeLists.txt  aligned-mem-pool.h  c2w.h  cfsm-builder.cc  cfsm-builder.h  cnn-helper.h  cnn.cc  cnn.h  conv.cc  conv.h  cuda.cc  cuda.h  deep-lstm.cc  deep-lstm.h  devices.cc  devices.h  dglstm.cc  dglstm.h  dglstmem.cc  dglstmem.h  dict.cc  dict.h  dim.cc  dim.h  edges-common.cc  edges.cc  edges.h  eigen-backend.cc  except.h  exec.cc  exec.h  expr.cc  expr.h  fast-lstm.cc  fast-lstm.h  functors.h  globals.cc  globals.h  gpu-kernels.h  gpu-ops.cu  (+67 more)
cnn/tests/: test_edges.cc  test_init.cc  test_utils.h
contrib/rust/: .gitignore  Cargo.toml  README.md
contrib/swig/: CMakeLists.txt  README.md  build.sbt  dynet_swig.i
dynet/: CMakeLists.txt  aligned-mem-pool.cc  aligned-mem-pool.h  c2w.h  cfsm-builder.cc  cfsm-builder.h  conv_kernels.cc  conv_kernels.h  cpu-matrix-multiply.h  cuDNN.h  cuda-matrix-multiply.h  cuda.cc  cuda.h  cudnn-ops.cc  cudnn-ops.cu  cudnn-ops.h  deep-lstm.cc  deep-lstm.h  device-structs.h  devices.cc  devices.h  dict.cc  dict.h  dim.cc  dim.h  dynet.cc  dynet.h  except.h  exec.cc  exec.h  expr.cc  expr.h  fast-lstm.cc  fast-lstm.h  functors.h  globals.cc  globals.h  gpu-file-template.cu.in  gpu-nodes-activations.cu  gpu-nodes-affinetranform.cu  (+163 more)
examples/: CMakeLists.txt  README.md  attentional.cc  attentional.h  conll_helper.cc  deptree.cc  deptree.h  easy-char-lstm-lm.cc  embed-cl.cc  embed_cl.cc  encdec-expr.cc  encdec.cc  expr-xtra.h  mem_seq2seq_encdec.cc  mlc.cc  morph.cc  mp.cc  nlm.cc  our_sentilyzer.cc  oursentimentmodel.cc  poisson-regression.cc  poisson-regression.cc~  read-write.cc  rnnlm-aevb.cc  rnnlm-batch.cc  rnnlm-cfsm.cc  rnnlm-final-batch.cc~  rnnlm-givenbag.cc  rnnlm-hsm.cc  rnnlm-mp.cc  rnnlm.cc  rnnlm.h  rnnlm2.cc  segrnn-sup.cc  sentilyzer_helper.cc  sentiment_analyzer.cc  sep_morph.cc  sep_morph_char_beam.cc  skiprnnlm.cc  tag-bilstm.cc  (+10 more)
examples/autobatch/: train_rnn-autobatch.cc  train_xor-autobatch.cc
examples/batching/: minibatch.py  rnnlm-batch.h  rnnlm-batch.py  train_rnnlm-batch.cc  train_xor-batch.cc
examples/cpp-utils/: cl-args.h  getpid.h
examples/cpu_vs_gpu/: cpu_vs_gpu.py
examples/devices/: cpu_vs_gpu.py  xor-multidevice.py
examples/document-classification/: train_imdb.cc
examples/encdec/: encdec.h  train_encdec.cc
examples/example-data/: dev-poi.txt  fin-dev.txt  fin-toy.txt  fin-words-dev.txt  fin-words.txt.REMOVED.git-id  seg-sup.dev.txt  textcat.txt
examples/fflm/: train_fflm.cc
examples/jupyter-tutorials/: API.ipynb  RNNs.ipynb  tutorial-1-xor.ipynb
examples/mnist/: mlp.h  mnist-autobatch.py  train_mnist.cc
examples/multiprocessing/: rnnlm.h  train_rnnlm-mp.cc  train_xor-mp.cc  train_xor-simple-mp.cc
examples/nlm/: train_nlm.cc
examples/noise-contrastive-estimation/: nce.h  sampler.h  train_rnnlm-batch-nce.cc
examples/poisson-regression/: train_poisson-regression.cc
examples/python/: attention.py  bilstmtagger.py  cpu_vs_gpu.py  minibatch.py  rnnlm-batch.py  rnnlm.py  rnnlm_transduce.py  util.py  viz_birnn.py  xor-multidevice.py  xor.py
examples/python-utils/: util.py
examples/read-write/: train_read-write.cc
examples/reinforcement-learning/: README.md  ddpg.py  dqn.py  main_ddpg.py  main_dqn.py  memory.py  network.py  readme.md  reduce_tree.py  train_test_utils.py
examples/rnnlm/: README.md  lstmlm-auto.py  rnnlm.py  rnnlm_transduce.py  train_rnnlm.cc
examples/rnnlm-aevb/: train_rnnlm-aevb.cc
examples/rnnlm-batch/: rnnlm-batch.h  train_rnnlm-batch.cc  train_rnnlm-batch.cc~
examples/rnnlm-cfsm/: train_rnnlm-cfsm.cc
examples/rnnlm-final-batch/: train_rnnlm-final-batch.cc
examples/rnnlm-givenbag/: rnnlm-givenbag.cc
examples/rnnlm-mp/: rnnlm.h  train_rnnlm-mp.cc
examples/segmental-rnn/: train_segrnn-sup.cc
examples/segrnn-sup/: train_segrnn-sup.cc
examples/sentence-embedding/: train_embed-cl.cc
examples/sequence-to-sequence/: encdec.h  train_attention.cc  train_encdec.cc
examples/softmax-builders/: train_rnnlm-cfsm.cc
examples/tag-bilstm/: train_tag-bilstm.cc  train_tag-bilstm.cc~
examples/tagger/: bilstmtagger.py  train_tag-bilstm.cc
examples/tensorboard/: README.md  rnnlm-batch.py  runcrayonserver.perl
examples/textcat/: train_textcat.cc
examples/transformer/: batch-utils.h  data-utils.h  def.h  dict-utils.h  ensemble-decoder.h  expr-xtra.h  mask-utils.h  math-utils.h  str-utils.h  timer.h  transformer-decode.cc  transformer-train.cc  transformer.h  utils.h  wrap-data.py
examples/treelstm/: dataloader.py  filter_glove.py  grid_search.txt  gridsearch.py  main.py  model.py  readme.md  scheduler.py  tree_lstm.py  utils.py
examples/tutorials/: API.ipynb  RNNs.ipynb  tutorial-1-xor.ipynb
examples/utils/: cl-args.h
examples/viz_birnn/: viz_birnn.py
proto/: CMakeLists.txt  serialization-benchmark.cc  serialization-util.h  tensor.proto
pycnn/: CHANGES.md  CMakeLists.txt  INSTALL  bilstmtagger.py  dynet.py  encdec.py  makefile  model_test.py  nlm.py  pybridge.h  pycnn.pxd  pycnn.py  pycnn.pyx  pycnn_viz.py  rnnlm.py  rnnlm_builder.py  setup.py  setup.py.in  setup_gpu.py  xor.py
python/: CHANGES.md  CMakeLists.txt  _dynet.pxd  _dynet.pyx  dynet.pxd  dynet.py  dynet.py.in  dynet.pyx  dynet_config.py  dynet_viz.py  makefile  mockdynet.py  model_test.py  pybridge.h  pyx_to_py.py  setup.py.in
rnnlm/: CMakeLists.txt  README.md  install-examples.sh  lm.cc
src/: CMakeLists.txt  Makefile  config.h.cmake
swig/: CMakeLists.txt  README.md  build.sbt  dynet_swig.i
tests/: CMakeLists.txt  README.md  test-cnn.cc  test-dim.cc  test-dynet.cc  test-exec-dynamic.cc  test-exec.cc  test-io.cc  test-mem.cc  test-nodes.cc  test-params.cc  test-rnn.cc  test-serialize.cc  test-softmax.cc  test-tensor.cc  test-trainers-io.cc  test-trainers.cc  test.h
tutorial/: 0_multiply.cc  1_linear_regression.cc  CMakeLists.txt
(+464 files in other folders)
