INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER tensor.proto)
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
set(TARGET serialization-benchmark)
ADD_EXECUTABLE(${TARGET} ${TARGET}.cc)
target_link_libraries(${TARGET} proto ${PROTOBUF_LIBRARY})
target_link_libraries(${TARGET} dynet ${LIBS})
